@@ -23,6 +23,7 @@ public class BillingManager implements PurchasesUpdatedListener, BillingClientSt
         void onPurchaseSuccessful(String productId);
         void onPurchaseFailed(int responseCode, String debugMessage);
         void onBillingError(String errorMessage);
+        void onPurchasesLoaded(List<Purchase> purchases);
     }
 
     private final BillingClient billingClient;
@@ -59,6 +60,7 @@ public class BillingManager implements PurchasesUpdatedListener, BillingClientSt
             Log.d(TAG, "Billing service connected successfully");
             listener.onBillingInitialized();
             queryProductDetails();
+            queryPurchases(); // Додаємо запит покупок
         } else {
             Log.e(TAG, "Failed to connect to billing service: " + billingResult.getDebugMessage());
             listener.onBillingError("Failed to connect to billing service");
@@ -94,32 +96,29 @@ public class BillingManager implements PurchasesUpdatedListener, BillingClientSt
         billingClient.queryProductDetailsAsync(queryProductDetailsParams,
                 (billingResult, productDetailsList) -> {
                     if (billingResult.getResponseCode() == BillingClient.BillingResponseCode.OK) {
-                        if (productDetailsList != null) {
-                            List<DonationProduct> products = new ArrayList<>();
-                            for (ProductDetails productDetails : productDetailsList) {
-                                DonationProduct product = createDonationProduct(productDetails);
-                                products.add(product);
-                            }
-                            
-                            // Сортуємо товари за ціною (від меншої до більшої)
-                            // Використовуємо Collections.sort для сумісності з API 23
-                            Collections.sort(products, new Comparator<DonationProduct>() {
-                                @Override
-                                public int compare(DonationProduct p1, DonationProduct p2) {
-                                    try {
-                                        // Витягуємо числові значення з цін
-                                        double price1 = extractPrice(p1.getPrice());
-                                        double price2 = extractPrice(p2.getPrice());
-                                        return Double.compare(price1, price2);
-                                    } catch (Exception e) {
-                                        Log.w(TAG, "Error sorting prices: " + e.getMessage());
-                                        return 0;
-                                    }
-                                }
-                            });
-                            
-                            listener.onProductsLoaded(products);
+                        List<DonationProduct> products = new ArrayList<>();
+                        for (ProductDetails productDetails : productDetailsList) {
+                            DonationProduct product = createDonationProduct(productDetails);
+                            products.add(product);
                         }
+
+                        // Сортуємо товари за ціною (від меншої до більшої)
+                        Collections.sort(products, new Comparator<DonationProduct>() {
+                            @Override
+                            public int compare(DonationProduct p1, DonationProduct p2) {
+                                try {
+                                    // Витягуємо числові значення з цін
+                                    double price1 = extractPrice(p1.getPrice());
+                                    double price2 = extractPrice(p2.getPrice());
+                                    return Double.compare(price1, price2);
+                                } catch (Exception e) {
+                                    Log.w(TAG, "Error sorting prices: " + e.getMessage());
+                                    return 0;
+                                }
+                            }
+                        });
+
+                        listener.onProductsLoaded(products);
                     } else {
                         Log.e(TAG, "Failed to query product details: " + billingResult.getDebugMessage());
                         listener.onBillingError("Failed to load products");
@@ -142,20 +141,14 @@ public class BillingManager implements PurchasesUpdatedListener, BillingClientSt
     }
 
     private String getIconForProduct(String productId) {
-        switch (productId) {
-            case "donate_seed_of_ideas":
-                return "ic_seed";
-            case "donate_spark_of_inspiration":
-                return "ic_spark";
-            case "donate_midnight_notebook":
-                return "ic_notebook";
-            case "donate_wave_of_support":
-                return "ic_wave";
-            case "donate_universe_of_inspiration":
-                return "ic_universe";
-            default:
-                return "ic_heart";
-        }
+        return switch (productId) {
+            case "donate_seed_of_ideas" -> "ic_seed";
+            case "donate_spark_of_inspiration" -> "ic_spark";
+            case "donate_midnight_notebook" -> "ic_notebook";
+            case "donate_wave_of_support" -> "ic_wave";
+            case "donate_universe_of_inspiration" -> "ic_universe";
+            default -> "ic_heart";
+        };
     }
 
     public void launchBillingFlow(Activity activity, String productId) {
@@ -164,11 +157,11 @@ public class BillingManager implements PurchasesUpdatedListener, BillingClientSt
             return;
         }
 
-        List<QueryProductDetailsParams.Product> productList = Arrays.asList(
-            QueryProductDetailsParams.Product.newBuilder()
-                .setProductId(productId)
-                .setProductType(BillingClient.ProductType.INAPP)
-                .build()
+        List<QueryProductDetailsParams.Product> productList = List.of(
+                QueryProductDetailsParams.Product.newBuilder()
+                        .setProductId(productId)
+                        .setProductType(BillingClient.ProductType.INAPP)
+                        .build()
         );
 
         QueryProductDetailsParams queryProductDetailsParams = QueryProductDetailsParams.newBuilder()
@@ -177,14 +170,13 @@ public class BillingManager implements PurchasesUpdatedListener, BillingClientSt
 
         billingClient.queryProductDetailsAsync(queryProductDetailsParams,
                 (billingResult, productDetailsList) -> {
-                    if (billingResult.getResponseCode() == BillingClient.BillingResponseCode.OK 
-                            && productDetailsList != null && !productDetailsList.isEmpty()) {
+                    if (billingResult.getResponseCode() == BillingClient.BillingResponseCode.OK && !productDetailsList.isEmpty()) {
                         
                         ProductDetails productDetails = productDetailsList.get(0);
-                        List<BillingFlowParams.ProductDetailsParams> productDetailsParamsList = Arrays.asList(
-                            BillingFlowParams.ProductDetailsParams.newBuilder()
-                                .setProductDetails(productDetails)
-                                .build()
+                        List<BillingFlowParams.ProductDetailsParams> productDetailsParamsList = List.of(
+                                BillingFlowParams.ProductDetailsParams.newBuilder()
+                                        .setProductDetails(productDetails)
+                                        .build()
                         );
 
                         BillingFlowParams billingFlowParams = BillingFlowParams.newBuilder()
@@ -249,32 +241,30 @@ public class BillingManager implements PurchasesUpdatedListener, BillingClientSt
     }
 
     public static String getBillingErrorMessage(int responseCode) {
-        switch (responseCode) {
-            case BillingClient.BillingResponseCode.BILLING_UNAVAILABLE:
-                return "Billing API version is not supported for the type requested";
-            case BillingClient.BillingResponseCode.DEVELOPER_ERROR:
-                return "Invalid arguments provided to the API";
-            case BillingClient.BillingResponseCode.ERROR:
-                return "Fatal error during the API action";
-            case BillingClient.BillingResponseCode.FEATURE_NOT_SUPPORTED:
-                return "Requested feature is not supported";
-            case BillingClient.BillingResponseCode.ITEM_ALREADY_OWNED:
-                return "Failure to purchase since item is already owned";
-            case BillingClient.BillingResponseCode.ITEM_NOT_OWNED:
-                return "Failure to consume since item is not owned";
-            case BillingClient.BillingResponseCode.ITEM_UNAVAILABLE:
-                return "Requested product is not available for purchase";
-            case BillingClient.BillingResponseCode.SERVICE_DISCONNECTED:
-                return "Play Store service is not connected now";
-            case BillingClient.BillingResponseCode.SERVICE_TIMEOUT:
-                return "The request has reached the maximum timeout before Google Play responds";
-            case BillingClient.BillingResponseCode.SERVICE_UNAVAILABLE:
-                return "Network connection is down";
-            case BillingClient.BillingResponseCode.USER_CANCELED:
-                return "User pressed back or canceled a dialog";
-            default:
-                return "Unknown billing error";
-        }
+        return switch (responseCode) {
+            case BillingClient.BillingResponseCode.BILLING_UNAVAILABLE ->
+                    "Billing API version is not supported for the type requested";
+            case BillingClient.BillingResponseCode.DEVELOPER_ERROR ->
+                    "Invalid arguments provided to the API";
+            case BillingClient.BillingResponseCode.ERROR -> "Fatal error during the API action";
+            case BillingClient.BillingResponseCode.FEATURE_NOT_SUPPORTED ->
+                    "Requested feature is not supported";
+            case BillingClient.BillingResponseCode.ITEM_ALREADY_OWNED ->
+                    "Failure to purchase since item is already owned";
+            case BillingClient.BillingResponseCode.ITEM_NOT_OWNED ->
+                    "Failure to consume since item is not owned";
+            case BillingClient.BillingResponseCode.ITEM_UNAVAILABLE ->
+                    "Requested product is not available for purchase";
+            case BillingClient.BillingResponseCode.SERVICE_DISCONNECTED ->
+                    "Play Store service is not connected now";
+            case BillingClient.BillingResponseCode.SERVICE_TIMEOUT ->
+                    "The request has reached the maximum timeout before Google Play responds";
+            case BillingClient.BillingResponseCode.SERVICE_UNAVAILABLE ->
+                    "Network connection is down";
+            case BillingClient.BillingResponseCode.USER_CANCELED ->
+                    "User pressed back or canceled a dialog";
+            default -> "Unknown billing error";
+        };
     }
 
     /**
@@ -305,5 +295,26 @@ public class BillingManager implements PurchasesUpdatedListener, BillingClientSt
             Log.w(TAG, "Failed to parse price: " + priceString, e);
             return 0.0;
         }
+    }
+
+    public void queryPurchases() {
+        if (!isServiceConnected) {
+            Log.w(TAG, "Billing service not connected, can't query purchases");
+            return;
+        }
+
+        QueryPurchasesParams params = QueryPurchasesParams.newBuilder()
+                .setProductType(BillingClient.ProductType.INAPP)
+                .build();
+
+        billingClient.queryPurchasesAsync(params,
+                (billingResult, purchasesList) -> {
+                    if (billingResult.getResponseCode() == BillingClient.BillingResponseCode.OK) {
+                        listener.onPurchasesLoaded(purchasesList);
+                    } else {
+                        Log.e(TAG, "Failed to query purchases: " + billingResult.getDebugMessage());
+                        listener.onPurchasesLoaded(new ArrayList<>());
+                    }
+                });
     }
 }
